Bug 360156 - File transfer notifications includes all previous transfers
Summary: File transfer notifications includes all previous transfers
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 5.5.95
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Martin Klapetek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-06 10:55 UTC by Antonio Rojas
Modified: 2016-05-02 17:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2016-03-06 10:55:29 UTC
In Plasma 5.6 beta, old file transfer notifications are never removed from the list, so after a few transfers the notification becomes huge. 

Reproducible: Always

Steps to Reproduce:
1. Copy a few files

Actual Results:  
Each new transfer is added to the notification text without removing previous ones, making the notification larger each time

Expected Results:  
Old notifications text is removed
Comment 1 Kai Uwe Broulik 2016-03-07 11:05:43 UTC
They are removed after 10 minutes.
Comment 2 Antonio Rojas 2016-03-07 11:09:44 UTC
Sorry, I wan't very clear in my description. I don't mean that they are not removed from the notification list. I mean that when a new transfer finishes, the notification text shows a long list of old transfers. And this includes transfers from >12 hours ago.
Comment 3 Kai Uwe Broulik 2016-03-07 11:14:20 UTC
Ok, thanks, so perhaps it's not clearing them properly.
Comment 4 Kai Uwe Broulik 2016-03-08 17:22:34 UTC
Ah, now I know what you meant; the notifications are grouped into a single popup and then eventually it gets elided; sorry. Probably just needs to set the "skip grouping" flag.
Comment 5 Kai Uwe Broulik 2016-05-02 17:08:51 UTC
Git commit 46229c9e47409f5d82d3d7644b949944086dcec2 by Kai Uwe Broulik.
Committed on 02/05/2016 at 17:07.
Pushed by broulik into branch 'master'.

[Notifications] Don't group job finished notifications

Otherwise we end up with a huge notification containing all previously finished jobs.
FIXED-IN: 5.7.0

Differential Revision: https://phabricator.kde.org/D1478

M  +1    -0    applets/notifications/package/contents/ui/Jobs.qml
M  +7    -3    dataengines/notifications/notificationaction.cpp
M  +3    -0    dataengines/notifications/notifications.operations
M  +1    -3    dataengines/notifications/notificationsengine.cpp
M  +1    -1    dataengines/notifications/notificationsengine.h

http://commits.kde.org/plasma-workspace/46229c9e47409f5d82d3d7644b949944086dcec2