[Notifications] Don't group job finished notifications

Otherwise we end up with a huge notification containing all previously finished jobs.

BUG: 360156
FIXED-IN: 5.7.0

Differential Revision: https://phabricator.kde.org/D1478